Fixed styling adn spacing within the table of the marks page

--- a/CSS/basicIndex.css
+++ b/CSS/basicIndex.css
@@ -65,7 +65,6 @@ body {
     font-family: 'Montserrat', sans-serif;
     letter-spacing: 2px;
     text-decoration: none;
-    text-stroke: 0.2px #3379b7;
     -webkit-text-stroke: 0.2px #3379b7;
 }
 
